scrollbar for ff fixed

--- a/src/main/web/css/scss/authentication.scss
+++ b/src/main/web/css/scss/authentication.scss
@@ -65,11 +65,9 @@
 		cursor: pointer;
 
 		&#login_button {
-			width: 100px;
-			padding: 10px 0;
 			margin-bottom: 10px;
 			margin-top: 30px;
-			@include button();
+			@include button(100px, 35px);
 		}
 
 		&#registration_button {
@@ -94,6 +92,6 @@
 		margin: auto; 
 			
 		margin-bottom: 10px;
-		@include input(1px);
+		@include input();
 	}
 }
