--- a/src/main/web/css/scss/header.scss
+++ b/src/main/web/css/scss/header.scss
@@ -1,9 +1,8 @@
 @import 'commons.scss';
 
+$HEADER_HEIGHT: 50px;
+
 #header {
-    width: 100%;
-    height: $HEADER_HEIGHT;
     background: $METAL_DARK;
-    margin:0px auto $WORKBENCH_ELEMENTS_SPACE auto;
 }
 
